--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "modal-app",
   "version": "0.1.0",
-  "homepage": "",
+  "homepage": "https://kirill551-pys.github.io/Modal-app",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
